2.8.0 "A New Day"
=====================

    ADDED: "Expanding tabs" and "Close tab by double click" options
    ADDED: Active panel follows Embedded Terminal working directory
    ADDED: Closing a tab can be quickly undone with a hotkey or a menu entry. A menu can reopen recently closed tabs.
    ADDED: Cycling through file name part selections when renaming files
    ADDED: In Konfigurator, two options are added to set foreground and background colors to the rename field
    ADDED: New tabs can be inserted next to the current tab or at the end of the tab list
    ADDED: Option to reset file selection on a mouse click without modifiers
    ADDED: Options for hiding some useless entries from Media Menu.
    ADDED: Shift+Del removes undesired entries from the history in various dialogs
    ADDED: The "New Folder..." dialog keeps a manageable folder history and suggests folder names
    ADDED: Option to duplicate an active tab by clicking Ctrl+LMB or Alt+LMB
    ADDED: Option to select New Tab Button behavior (perform New Tab or Duplicate Current Tab action)
    CHANGED: Default shortcuts for New Tab and Duplicate Current Tab actions
    CHANGED: Shortcut for the embedded terminal emulator
    CHANGED: Split "Show new/close tab buttons" into two options
    FIXED: Calls to methods deprecated in modern Qt and KDE Frameworks libs
    FIXED: Krusader doesn't delete all selected folders if some of them aren't empty
    FIXED: Memory leak in the Locate dialog
    FIXED: Terminal alternate Paste shortcut does not work
    FIXED: UDSEntry::insert deprecation warnings
    FIXED: [ 150247 ] When calculating occupied space of "..", krusader selects all directories
    FIXED: [ 167410 ] synchronize directory window: column widths are incorrect
    FIXED: [ 228461 ] KrViewer - Middle mouse button to close tabs in default settings
    FIXED: [ 280020 ] No info about alternate deletion shortcut
    FIXED: [ 282069 ] Bad default in the New Text File dialog